Use of passDb.objects.filter(pk).count() on loginsFilter

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
+{% block title %}{{ title }} | {% trans 'Password Manager' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'Django administration' %}</h1>
+<h1 id="site-name">{% trans 'Password Manager' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
