--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -7,12 +7,9 @@ PassManager
 
 {% block branding %}
 <a href="{% url "admin:index" %}">
-  <img style="float:left; margin: -6px 4px 4px 4px"
-       src="/static/pwm_logo.png"/>
-</a>
-<h1 style="padding: 4px 0 0 70px;"
-    id="site-name">PassManager
+<h1 id="site-name">PassManager
 </h1>
+</a>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
