Removed unused files

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -12,4 +12,6 @@ PassManager
 </a>
 {% endblock %}
 
+{% block content_title %}{% if title %}<h1>&nbsp;</h1>{% endif %}{% endblock %}
+
 {% block nav-global %}{% endblock %}
